--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@pixi/react": "^8.0.5",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "dotenv": "^17.2.3",
@@ -17,6 +18,8 @@
     "lenis": "^1.3.17",
     "next": "16.1.6",
     "pg": "^8.18.0",
+    "pixi-filters": "^6.1.5",
+    "pixi.js": "^8.16.0",
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
